--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,84 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.row{
+.row {
     margin: 0;
 }
 
-
-
-h4, h3{
-    font-size: 16px;
-}
-li{
-    font-size: 13px;
+h4,
+h3 {
+    color: #398c90;
 }
 
-.home{
-    height: 90vh;
+/* Home */
+
+hr {
+    width: 90%;
+    background: #f78e21;
 }
 
-.redes img{
+.redes {
+    width: 80%;
+}
+
+.redes img {
     width: 50px;
     height: 50px;
 }
 
-.servicios img{
+.servicios img {
     width: 90px;
 }
 
+footer {
+    background-image: url(../images/Img_footer.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.contact {
+    width: 80%;
+    padding: 1rem;
+}
+
+.contact .item {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.contact .item img {
+    width: 30px;
+    height: 30px;
+}
+
+.firma {
+    width: 80%;
+    margin: 0 auto;
+    background: #0e9f9c;
+    border-radius: 10px 10px 0 0;
+    padding: 15px;
+    color: #ffffff;
+}
+
+.firma p {
+    font-size: 13px;
+    margin: 0;
+}
+
+@media (max-width:576px) {
+
+    h4,
+    h3 {
+        font-size: 14px;
+        color: #398c90;
+    }
+
+    li,
+    .precios p {
+        font-size: 10px;
+    }
+}
