--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,19 @@
     margin: 0;
 }
 
+section,
+footer {
+    max-width: 700px;
+    margin: 0 auto;
+}
+
 h4,
 h3 {
     color: #398c90;
+}
+
+li {
+    list-style: none;
 }
 
 /* Home */
@@ -21,6 +31,58 @@ hr {
 
 .redes {
     width: 80%;
+}
+
+/* Precios */
+.precios h3.title {
+    width: 50%;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.precios h3.title::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 70px;
+    height: 1px;
+    background: #f78e21;
+    left: -55px;
+}
+
+.precios h3.title::before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 70px;
+    height: 1px;
+    background: #f78e21;
+    right: -55px;
+}
+
+.precios .item {
+    display: grid;
+    grid-template-columns: 80% 20%;
+}
+
+.precios p {
+    margin: 0;
+}
+
+.precios h4 {
+    margin-bottom: 0;
+}
+
+.clausulas {
+    border: 1px solid #0e9f9c;
+    padding: .5rem;
+}
+
+.clausulas span {
+    color: #0e9f9c;
 }
 
 .redes img {
@@ -55,6 +117,10 @@ footer {
     height: 30px;
 }
 
+.contact .item a {
+    color: #636768;
+}
+
 .firma {
     width: 80%;
     margin: 0 auto;
@@ -73,12 +139,19 @@ footer {
 
     h4,
     h3 {
-        font-size: 14px;
+        font-size: 13px;
         color: #398c90;
     }
 
     li,
-    .precios p {
+    .precios p,
+    .precios span {
         font-size: 10px;
+    }
+
+    .clausulas p,
+    .clausulas span {
+        font-size: 8px;
+        text-align: center;
     }
 }
