--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
+@font-face {
+    font-family: "Lorenza";
+    src: url('../fonts/Lorenza.otf');
+}
+
+@font-face {
+    font-family: 'Klavika';
+    src: url('../fonts/KlavikaRegular.otf');
+}
+
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Klavika', serif;
 }
 
 .row {
@@ -16,6 +27,7 @@ footer {
 h4,
 h3 {
     color: #398c90;
+    font-family: 'Lorenza', serif;
 }
 
 li {
